@@ -1,1 +1,1 @@
-0.7.0
+0.8.0
